cluster/apps/home/docker-wyze-bridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-wyze-bridge 
  namespace: home
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  selector:
    app: docker-wyze-bridge
